# hifi-gan

./: Dockerfile  LICENSE  README.md  config_v1.json  config_v2.json  config_v3.json  pyproject.toml  requirements.txt  setup.py  train.py
hifi_gan/: inference.py  inference_e2e.py  meldataset.py  models.py
