[project]
name = "hifi-gan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.8.20"
dependencies = [
    "librosa",
    "matplotlib",
    "numba",
    "numpy",
    "pillow",
    "scipy",
    "soundfile",
    "tensorboard",
    "torch",
]

[dependency-groups]
dev = [
    "librosa==0.7.2",
    "matplotlib==3.1.3",
    "numba==0.48",
    "numpy==1.17.4",
    "pillow==10.4.0",
    "scipy==1.4.1",
    "soundfile==0.10.3.post1",
    "tensorboardx>=2.6.2.2",
    "torch==1.13.1",
    "setuptools<65", # numpyがエラーになるため？
]
