[project]
name = "hifi-gan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "librosa",
    "matplotlib",
    "numpy",
    "pillow",
    "scipy",
    "soundfile",
    "tensorboard",
    "torch",
]

[dependency-groups]
dev = [
    "librosa==0.9.1",
    "matplotlib>=3.10.3",
    "numpy==1.26.4",
    "pillow>=10.4.0",
    "scipy==1.13.1",
    "soundfile>=0.13.0",
    "tensorboard>=2.19.0",
    "torch==2.6.0",
]
